--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -19,7 +19,7 @@
         <tbody>
             {% for user in users %}
             <tr>
-                <td>{{ user.username }}</td>
+                <td><a href="/user/{{ user.username }}">{{ user.username }}</td>
                 <td>{{ user.id }}</td>
                 <td><a href="{{ user.url }}" target="_blank">{{ user.url }}</a></td>
                 <td>{{ user.flags }}</td>
